; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_if_setcapenablebit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_if_setcapenablebit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @if_setcapenablebit(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %3
  %10 = load i32, i32* %5, align 4
  %11 = load i64, i64* %4, align 8
  %12 = inttoptr i64 %11 to %struct.ifnet*
  %13 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = or i32 %14, %10
  store i32 %15, i32* %13, align 4
  br label %16

16:                                               ; preds = %9, %3
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %16
  %20 = load i32, i32* %6, align 4
  %21 = xor i32 %20, -1
  %22 = load i64, i64* %4, align 8
  %23 = inttoptr i64 %22 to %struct.ifnet*
  %24 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = and i32 %25, %21
  store i32 %26, i32* %24, align 4
  br label %27

27:                                               ; preds = %19, %16
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
